# pdf-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  starter.py
app/config/: env_config.py  prompts.py  qdrant_config.py  redis_config.py
app/controller/: chat_controller.py  retrieval_controller.py  upload_controller.py
app/ingestion/: pdf_loader.py
app/llms/: gemini.py
app/prompts/: rag_prompt.py
app/rag/: chunking.py  embeddings.py  pipeline.py  retriever.py  vectorstore.py
app/routes/: chat.py  health.py  retrieval.py  router.py  upload.py
app/schema/: chat_schema.py  document_schema.py
app/services/: chunking_service.py  embedding_service.py  llm_service.py  memory_manager_service.py  pdf_service.py  rag_service.py  retrieval_service.py  short_memory_service.py  startup_service.py  upload_service.py  vectorstore_service.py
app/tests/: test_chat_endpoint.py  test_chunking.py  test_embeddings.py  test_gemini.py  test_health.py  test_pdf_loader.py  test_rag_pipeline.py  test_retrieval_endpoint.py  test_retriever.py  test_upload.py  test_vectorstore.py
app/utils/: exception_handlers.py  file_utils.py  logger.py  response_formatter.py  validators.py
website/: app.py
