[project]
name = "pdf-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
